--- a/src/rl_deploy_nav/package.xml
+++ b/src/rl_deploy_nav/package.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>rl_deploy</name>
+  <name>rl_deploy_nav</name>
   <version>0.0.0</version>
-  <description>This package takes actions and send motor commands.</description>
+  <description>This package takes nav actions and sends sport mode commands.</description>
   <maintainer email="gabearod2@gmail.com">gabriel</maintainer>
   <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-
+  
   <depend>unitree_go</depend>
   <depend>unitree_api</depend>
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
   <depend>rosbag2_cpp</depend>
-  
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
