--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "src/unitree_ros2"]
 	path = src/unitree_ros2
 	url = https://github.com/unitreerobotics/unitree_ros2.git
+[submodule "src/go2_python_sdk2"]
+	path = src/go2_python_sdk2
+	url = https://github.com/legion1581/go2_python_sdk2.git
+	branch = dev
