Adding motion switcher for nav

--- a/src/unitree_ros2_python/package.xml
+++ b/src/unitree_ros2_python/package.xml
@@ -19,6 +19,7 @@
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
+  <exec_depend>go2_python_sdk2</exec_depend>
   <export>
     <build_type>ament_python</build_type>
   </export>
