Creating executable functionality

--- a/src/go2_sdk_integration/CMakeLists.txt
+++ b/src/go2_sdk_integration/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.8)
 project(go2_sdk_integration)
 
 # Default to C99
@@ -11,40 +11,43 @@ if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 14)
 endif()
 
-# Set compiler options for warnings
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# Find necessary packages
+# Specify include directories
+include_directories(include include/common)
+
+# Specify the node executable
+add_executable(go2_motion_switcher src/go2_motion_switcher.cpp)
+
+# Find ROS dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(rosbag2_cpp REQUIRED)
 
-# Include directories
-include_directories(include include/common include/nlohmann)
-link_directories(src)
-
-# Add executable for the motion switcher node
-add_executable(go2_motion_switcher src/go2_motion_switcher.cpp)
-target_link_libraries(go2_motion_switcher ${rclcpp_LIBRARIES})
-
-# Install the motion_switcher executable and the node executable
-install(
-  TARGETS go2_motion_switcher
-  DESTINATION lib/${PROJECT_NAME}
+# Link libraries
+ament_target_dependencies(go2_motion_switcher
+  rclcpp
+  std_msgs
+  rosbag2_cpp
 )
 
-install(
-  DIRECTORY bin/
-  DESTINATION lib/${PROJECT_NAME}/
-  USE_SOURCE_PERMISSIONS
-)
+# Install targets
+install(TARGETS
+  go2_motion_switcher
+  DESTINATION lib/${PROJECT_NAME})
 
-# Testing (if needed)
+# If the motion_switcher executable is in the bin directory of your package
+# Ensure it is installed correctly
+install(FILES bin/motion_switcher
+  DESTINATION lib/${PROJECT_NAME})
+
+# Testing support
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   ament_lint_auto_find_test_dependencies()
 endif()
 
-# Finalize package
 ament_package()
