--- a/src/go2_sdk_integration/CMakeLists.txt
+++ b/src/go2_sdk_integration/CMakeLists.txt
@@ -16,14 +16,20 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 # Specify include directories
-include_directories(include include/common)
+include_directories(
+  ${CMAKE_CURRENT_SOURCE_DIR}/include
+  ${CMAKE_CURRENT_SOURCE_DIR}/include/common
+  ${CMAKE_CURRENT_SOURCE_DIR}/include/nlohmann
+)
 
 # Specify the node executables
-add_executable(go2_ai_switcher src/go2_ai_switcher.cpp)
-add_executable(go2_sport_switcher src/go2_sport_switcher.cpp)
+add_executable(go2_ai_switcher src/go2_ai_switcher.cpp src/common/ros2_sport_client.cpp)
+add_executable(go2_sport_switcher src/go2_sport_switcher.cpp src/common/ros2_sport_client.cpp)
 
 # Find ROS dependencies
 find_package(ament_cmake REQUIRED)
+find_package(unitree_api REQUIRED)
+find_package(unitree_go REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(rosbag2_cpp REQUIRED)
@@ -33,12 +39,16 @@ ament_target_dependencies(go2_ai_switcher
   rclcpp
   std_msgs
   rosbag2_cpp
+  unitree_api
+  unitree_go
 )
 
 ament_target_dependencies(go2_sport_switcher
   rclcpp
   std_msgs
   rosbag2_cpp
+  unitree_api
+  unitree_go
 )
 
 # Install targets
@@ -47,7 +57,7 @@ install(TARGETS
   go2_sport_switcher
   DESTINATION lib/${PROJECT_NAME})
 
-# Install the executables from the bin directory if they exist
+# Optionally install pre-built executables if they exist in bin/
 install(FILES bin/ai_switcher
         DESTINATION lib/${PROJECT_NAME})
 install(FILES bin/sport_switcher
@@ -60,4 +70,3 @@ if(BUILD_TESTING)
 endif()
 
 ament_package()
-
