--- a/src/go2_sdk_integration/CMakeLists.txt
+++ b/src/go2_sdk_integration/CMakeLists.txt
@@ -25,6 +25,7 @@ include_directories(
 # Specify the node executables
 add_executable(go2_ai_switcher src/go2_ai_switcher.cpp src/common/ros2_sport_client.cpp)
 add_executable(go2_sport_switcher src/go2_sport_switcher.cpp src/common/ros2_sport_client.cpp)
+add_executable(go2_motion_switcher_service src/go2_motion_switcher_service.cpp src/common/ros2_sport_client.cpp)
 
 # Find ROS dependencies
 find_package(ament_cmake REQUIRED)
@@ -32,6 +33,7 @@ find_package(unitree_api REQUIRED)
 find_package(unitree_go REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(std_srvs REQUIRED)
 find_package(rosbag2_cpp REQUIRED)
 
 # Link libraries
@@ -50,17 +52,28 @@ ament_target_dependencies(go2_sport_switcher
   unitree_api
   unitree_go
 )
+ament_target_dependencies(go2_motion_switcher_service
+  rclcpp
+  std_msgs
+  std_srvs
+  rosbag2_cpp
+  unitree_api
+  unitree_go
+)
 
 # Install targets
 install(TARGETS
   go2_ai_switcher
   go2_sport_switcher
+  go2_motion_switcher_service
   DESTINATION lib/${PROJECT_NAME})
 
 # Optionally install pre-built executables if they exist in bin/
 install(FILES bin/ai_switcher
         DESTINATION lib/${PROJECT_NAME})
 install(FILES bin/sport_switcher
+        DESTINATION lib/${PROJECT_NAME})
+install(FILES bin/check_mode
         DESTINATION lib/${PROJECT_NAME})
 
 # Testing support
